--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 
 .container {
-  max-width: 1200px;
+  max-width: 1250px;
   margin: 0 auto;
   padding-top: 20px;
   display: flex;
@@ -74,7 +74,7 @@ body {
 }
 
 .hero-containers {
-  max-width: 1200px;
+  max-width: 1250px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -224,9 +224,7 @@ section {
   margin: 0 auto;
 }
 
-section:nth-of-type(even) {
-  background-color: #f9f9f9;
-}
+
 
 h2 {
   font-size: 32px;
@@ -500,7 +498,7 @@ footer .container p {
 
 .problemas-header {
   padding: 40px 4%;
-  max-width: 1100px;
+  max-width: 1250px;
   margin: 0 auto;
 }
 .problemas-header h2 {
@@ -523,7 +521,7 @@ footer .container p {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 20px;
-  max-width: 1000px;
+  max-width: 1250px;
   justify-content: center;
   align-items: stretch;
   margin: 0 auto;
@@ -847,6 +845,9 @@ footer .container p {
   color: #666;
   font-size: 0.95em;
 }
+.benefit-promisse {
+  max-width: 1250px;
+}
 .benefit-text {
   display: flex;
   flex-direction: column;
@@ -899,7 +900,7 @@ footer .container p {
 .psiterapia-container {
   background: linear-gradient(to right, #fff, rgb(138, 232, 138));
   display: flex;
-  max-width: 1200px;
+  max-width: 1250px;
   margin: 0 auto;
   justify-content: space-between;
   gap: 2rem;
@@ -924,7 +925,7 @@ footer .container p {
   width: fit-content;
 }
 .psiterapia-text {
-  max-width: 1100px;
+  max-width: 1250px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -1109,12 +1110,197 @@ footer .container p {
   .midias {
     flex-direction: column;
   }
+  .abordagem {
+    max-width: 100%;
+    padding: 2px;
+  }
+  .abordagem-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    max-width: 1020px;
+    width: 100%;
+  }
+  .abordagem-title  {
+    padding: 10px;
+  }
+  .abordagem-title h2{
+    line-height: 1;
+    width: 100%;
+  }
+  .abordagem-title p {
+    line-height: 1;
+    font-size: 24px;
+  }
+  .abordagem-text {
+    font-size: 18px;
+  }
+  .abordagem-imaginations {
+    display: flex;
+   flex-direction: column;
+   
+  }
+  
+  .imagination {
+    max-width: 160px;
+    max-height: 160px;
+  }
+  .abordagem-leandro  {
+    display: flex;
+    flex-direction: column;
+  }
+  .abordagem-leandro .btn {
+    font-size: 15px;
+    align-items: center;
+  }
+  .imagination-span {
+    font-size: 20px;
+    text-align:center;
+    line-height: 1;
+    margin: 20px 0;
+    
+  }
+  .imagination-span strong {
+    text-transform: uppercase;
+    background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  }
 }
 .elfsight {
-  background-color: #1d1d1d;
+  background-color: #010000;
   margin: 0 auto;
   padding: 20px;
 }
 .elfsight a {
   display: none;
+}
+.abordagem {
+  background-color: #1d1d1d;
+  
+}
+
+.abordagem {
+  max-width: 1250px;
+}
+.abordagem-title h2 {
+  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-transform: uppercase;
+  font-size: 3rem;
+  text-align: center;
+}
+.abordagem-title p {
+  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.abordagem-container {
+  display: flex;
+}
+.abordagem-container img {
+  max-width: 500px;
+  filter: drop-shadow(0 20px 30px rgb(138, 232, 138));
+}
+.abordagem-text {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 2rem;
+  padding: 20px;
+}
+.abordagem-text p {
+  color: #fff;
+  
+}
+.abordagem-text span {
+  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.imaginations {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.imagination {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100%;
+  width: 200px;
+  height: 200px;
+  border-radius: 30px;
+  box-shadow: 1px 2px 3px rgb(138, 232, 138);
+}
+.imagination p {
+  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+}
+.imagination .overlay {
+  border-radius: 30px;
+}
+.abordagem-imaginations {
+  display: flex;
+}
+.abordagem-leandro {
+  border-radius: 50%;
+ 
+}
+.abordagem-leandro .btn {
+  margin-top: -20px;
+  z-index: 999;
+}
+#dream {
+  background: linear-gradient(to right, #fff, rgb(138, 232, 138));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#dream strong {
+  color: gold;
+}
+.abordagem-leandro img {
+  border-radius: 10px; /* opcional */
+  filter: drop-shadow(0 0 25px 5px rgba(0, 255, 0, 0.6)); /* sombra verde inicial */
+  animation: trovoada 6s infinite;
+}
+
+@keyframes trovoada {
+  0%, 100% {
+    filter: drop-shadow(0 0 25px 5px rgba(0, 255, 0, 0.6));
+  }
+  10% {
+    filter: drop-shadow(0 0 60px rgb(255, 255, 255));
+  }
+  11% {
+    filter: drop-shadow(0 0 25px 5px rgba(0, 255, 0, 0.6));
+  }
+  12% {
+    filter: drop-shadow(0 0 80px rgba(255, 255, 255, 1));
+  }
+  13% {
+    filter: drop-shadow(0 0 25px 5px rgba(0, 255, 0, 0.6));
+  }
+  70% {
+    filter: drop-shadow(0 0 25px 5px rgba(0, 255, 0, 0.9));
+  }
+  71% {
+    filter: drop-shadow(0 0 90px rgba(255, 255, 255, 1));
+  }
+  72% {
+    filter: drop-shadow(0 0 25px 5px rgba(0, 255, 0, 0.6));
+  }
 }
